--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,14 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.97"
+clap = { version = "4.5.35", features = ["derive"] }
 nvml-wrapper = "0.10.0"
 rusb = "0.9.4"
+serde = "1.0.219"
+serde_derive = "1.0.219"
+shellexpand = "3.1.0"
 systemstat = "0.2.4"
+toml = "0.8.20"
 
 [package.metadata.deb]
 maintainer = "Nish Tahir <nishtahir@outlook.com>"
