Fix deb package doesn't have access to home.
Additionally update the default polling interval

--- a/packaging/systemd/af-pro-display.service
+++ b/packaging/systemd/af-pro-display.service
@@ -8,7 +8,7 @@ ExecStart=/usr/bin/af-pro-display
 Restart=always
 RestartSec=5
 ProtectSystem=strict
-ProtectHome=true
+ProtectHome=false
 PrivateTmp=true
 NoNewPrivileges=true
 
