--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ authors = [
 [dependencies]
 anyhow = "1.0.97"
 clap = { version = "4.5.35", features = ["derive"] }
+ctrlc = { version = "3.4.7", features = ["termination"] }
 nvml-wrapper = "0.10.0"
 rusb = "0.9.4"
 serde = "1.0.219"
