--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,16 +8,21 @@ authors = [
     "Anthony Batchelor <tony@ynottony.net>",
 ]
 
+[features]
+default = ["amd", "nvidia"]
+amd = ['dep:libamdgpu_top']
+nvidia = ['dep:nvml-wrapper']
+
 [dependencies]
 anyhow = "1.0.97"
 clap = { version = "4.5.35", features = ["derive"] }
 ctrlc = { version = "3.4.7", features = ["termination"] }
-nvml-wrapper = "0.10.0"
+libamdgpu_top = { version = "0.10.4", optional = true }
+nvml-wrapper = { version = "0.10.0", optional = true }
 rusb = "0.9.4"
 serde = "1.0.219"
 serde_derive = "1.0.219"
 shellexpand = "3.1.0"
-systemstat = "0.2.4"
 toml = "0.8.20"
 
 [package.metadata.deb]
